# Trust-surface

./: .gitignore  CHANGELOG.md  OperationalLeverageFramework.spec  README.md  pyproject.toml
app/: config.py
app/connectors/: brand_impersonation_monitor.py  gdelt_news.py  hibp_breach_domain.py  procurement_documents.py  public_docs_pdf.py  registry.py  shodan.py  social_twitter.py  website_analyzer.py
app/routers/: assessments.py  risks.py  settings.py
app/services/: assessment_service.py  risk_brief_service.py  risk_story.py
app/utils/: reporting.py
docs/: decisions.md  overview.md
examples/: README.md
scripts/: run.py
src/operational_leverage_framework/: packaged_app.py
src/operational_leverage_framework/cli/: main.py
src/reasoner/: hypotheses.py
static/css/: styles.css
static/js/: abuse_explorer.js  app.js
templates/: assessment_overview.html  assessment_wizard.html  base.html  hypotheses.html  risk_detail.html  risks.html  settings.html
templates/partials/: risk_reasoning_block.html
tests/: test_cli_smoke.py  test_connector_smoke.py  test_connectors_core.py
